fix accessibility contrast of nav links

--- a/project1/styles/styles.css
+++ b/project1/styles/styles.css
@@ -80,8 +80,7 @@ header {
 }
 
 .active {
-  color: var(--hightlight_color);
-  text-decoration: underline;
+  border-bottom: 5px solid #79BF74;
 }
 
 #cta:hover {
